Fix spacing, colours

--- a/form-utils.css
+++ b/form-utils.css
@@ -3,24 +3,23 @@
 .arrow-steps {
   display: flex;
   justify-content: space-between;
+  margin-top: 15px;
+  width: 100%;
 }
 
 .arrow-steps .step {
-  background-color: #d9e3f7;
+  background-color: #fff;
   color: #666;
 	cursor: default;
   font-size: 16px;
   line-height: 16px;
 	margin: 0 3px;
-	min-width: 180px;
+	min-width: calc(33% - 5px);
   padding: 10px 10px 10px 30px;
 	position: relative;
   text-align: center;
+  text-transform: uppercase;
   transition: background-color 0.2s ease;
-  -webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
   z-index: 999999;
 }
 
@@ -56,7 +55,7 @@
 }
 
 .arrow-steps .step.current {
-	background-color: #23468c;
+	background-color: #00b9e4;
   color: #fff;
 }
 
